10119 : design change and correct alignment in project overview

--- a/web/public/scss/_projectOverview.scss
+++ b/web/public/scss/_projectOverview.scss
@@ -29,6 +29,9 @@
         background: transparent;
         color: #006a4d;
         border-radius: 2px;
+        @include mdScreen {
+            padding: 6px 16px 3px;
+        }
         &:focus {
             outline: none;
         }
